generated/wbp/wbpParser.ts
// Generated from wbp.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class wbpParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly INTEGER = 25;
	public static readonly WS = 26;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_chordReference = 0;
	public static readonly RULE_direction = 1;
	public static readonly RULE_sign = 2;
	public static readonly RULE_chordTone = 3;
	public static readonly RULE_chordType = 4;
	public static readonly RULE_signedInt = 5;
	public static readonly RULE_chordToneReference = 6;
	public static readonly RULE_step = 7;
	public static readonly RULE_steps = 8;
	public static readonly RULE_sourceChord = 9;
	public static readonly RULE_targetChord = 10;
	public static readonly RULE_transition = 11;
	public static readonly literalNames: (string | null)[] = [ null, "'C'", 
                                                            "'N'", "'U'", 
                                                            "'D'", "'+'", 
                                                            "'-'", "'R'", 
                                                            "'T'", "'F'", 
                                                            "'S'", "'?'", 
                                                            "'M'", "'m'", 
                                                            "'dom7'", "'maj7'", 
                                                            "'m7'", "'dim'", 
                                                            "'m7b5'", "'dim7'", 
                                                            "'aug'", "'aug7'", 
                                                            "','", "'->'", 
                                                            "';'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, "INTEGER", 
                                                             "WS" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"chordReference", "direction", "sign", "chordTone", "chordType", "signedInt", 
		"chordToneReference", "step", "steps", "sourceChord", "targetChord", "transition",
	];
	public get grammarFileName(): string { return "wbp.g4"; }
	public get literalNames(): (string | null)[] { return wbpParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return wbpParser.symbolicNames; }
	public get ruleNames(): string[] { return wbpParser.ruleNames; }
	public get serializedATN(): number[] { return wbpParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, wbpParser._ATN, wbpParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public chordReference(): ChordReferenceContext {
		let localctx: ChordReferenceContext = new ChordReferenceContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, wbpParser.RULE_chordReference);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 24;
			_la = this._input.LA(1);
			if(!(_la===1 || _la===2)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public direction(): DirectionContext {
		let localctx: DirectionContext = new DirectionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, wbpParser.RULE_direction);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 26;
			_la = this._input.LA(1);
			if(!(_la===3 || _la===4)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public sign(): SignContext {
		let localctx: SignContext = new SignContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, wbpParser.RULE_sign);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 28;
			_la = this._input.LA(1);
			if(!(_la===5 || _la===6)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public chordTone(): ChordToneContext {
		let localctx: ChordToneContext = new ChordToneContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, wbpParser.RULE_chordTone);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 30;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 1920) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public chordType(): ChordTypeContext {
		let localctx: ChordTypeContext = new ChordTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, wbpParser.RULE_chordType);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 32;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 4192256) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public signedInt(): SignedIntContext {
		let localctx: SignedIntContext = new SignedIntContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, wbpParser.RULE_signedInt);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 34;
			this.sign();
			this.state = 35;
			this.match(wbpParser.INTEGER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public chordToneReference(): ChordToneReferenceContext {
		let localctx: ChordToneReferenceContext = new ChordToneReferenceContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, wbpParser.RULE_chordToneReference);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 37;
			this.chordTone();
			this.state = 39;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===5 || _la===6) {
				{
				this.state = 38;
				this.signedInt();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public step(): StepContext {
		let localctx: StepContext = new StepContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, wbpParser.RULE_step);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 41;
			this.chordReference();
			this.state = 42;
			this.match(wbpParser.T__21);
			this.state = 43;
			this.chordToneReference();
			this.state = 46;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===22) {
				{
				this.state = 44;
				this.match(wbpParser.T__21);
				this.state = 45;
				this.direction();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public steps(): StepsContext {
		let localctx: StepsContext = new StepsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, wbpParser.RULE_steps);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 48;
			this.step();
			this.state = 51;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 49;
				this.match(wbpParser.T__22);
				this.state = 50;
				this.step();
				}
				}
				this.state = 53;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la===23);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public sourceChord(): SourceChordContext {
		let localctx: SourceChordContext = new SourceChordContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, wbpParser.RULE_sourceChord);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 55;
			this.match(wbpParser.T__9);
			this.state = 56;
			this.chordType();
			this.state = 61;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===22) {
				{
				{
				this.state = 57;
				this.match(wbpParser.T__21);
				this.state = 58;
				this.chordType();
				}
				}
				this.state = 63;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public targetChord(): TargetChordContext {
		let localctx: TargetChordContext = new TargetChordContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, wbpParser.RULE_targetChord);
		try {
			this.state = 67;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 8:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 64;
				this.match(wbpParser.T__7);
				this.state = 65;
				this.signedInt();
				}
				break;
			case 11:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 66;
				this.match(wbpParser.T__10);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public transition(): TransitionContext {
		let localctx: TransitionContext = new TransitionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, wbpParser.RULE_transition);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 69;
			this.sourceChord();
			this.state = 70;
			this.match(wbpParser.T__23);
			this.state = 71;
			this.targetChord();
			this.state = 72;
			this.match(wbpParser.T__23);
			this.state = 73;
			this.steps();
			this.state = 74;
			this.match(wbpParser.T__23);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}


	private static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!wbpParser.__ATN) {
			wbpParser.__ATN = new ATNDeserializer().deserialize(wbpParser._serializedATN);
		}

		return wbpParser.__ATN;
	}


	static DecisionsToDFA = wbpParser._ATN.decisionToState.map( (ds: DecisionState, index: number) => new DFA(ds, index) );

}

export class ChordReferenceContext extends ParserRuleContext {
	constructor(parser?: wbpParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
    public get ruleIndex(): number {
    	return wbpParser.RULE_chordReference;
	}
}


export class DirectionContext extends ParserRuleContext {
	constructor(parser?: wbpParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
    public get ruleIndex(): number {
    	return wbpParser.RULE_direction;
	}
}


export class SignContext extends ParserRuleContext {
	constructor(parser?: wbpParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
    public get ruleIndex(): number {
    	return wbpParser.RULE_sign;
	}
}


export class ChordToneContext extends ParserRuleContext {
	constructor(parser?: wbpParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
    public get ruleIndex(): number {
    	return wbpParser.RULE_chordTone;
	}
}


export class ChordTypeContext extends ParserRuleContext {
	constructor(parser?: wbpParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
    public get ruleIndex(): number {
    	return wbpParser.RULE_chordType;
	}
}


export class SignedIntContext extends ParserRuleContext {
	constructor(parser?: wbpParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public sign(): SignContext {
		return this.getTypedRuleContext(SignContext, 0) as SignContext;
	}
	public INTEGER(): TerminalNode {
		return this.getToken(wbpParser.INTEGER, 0);
	}
    public get ruleIndex(): number {
    	return wbpParser.RULE_signedInt;
	}
}


export class ChordToneReferenceContext extends ParserRuleContext {
	constructor(parser?: wbpParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public chordTone(): ChordToneContext {
		return this.getTypedRuleContext(ChordToneContext, 0) as ChordToneContext;
	}
	public signedInt(): SignedIntContext {
		return this.getTypedRuleContext(SignedIntContext, 0) as SignedIntContext;
	}
    public get ruleIndex(): number {
    	return wbpParser.RULE_chordToneReference;
	}
}


export class StepContext extends ParserRuleContext {
	constructor(parser?: wbpParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public chordReference(): ChordReferenceContext {
		return this.getTypedRuleContext(ChordReferenceContext, 0) as ChordReferenceContext;
	}
	public chordToneReference(): ChordToneReferenceContext {
		return this.getTypedRuleContext(ChordToneReferenceContext, 0) as ChordToneReferenceContext;
	}
	public direction(): DirectionContext {
		return this.getTypedRuleContext(DirectionContext, 0) as DirectionContext;
	}
    public get ruleIndex(): number {
    	return wbpParser.RULE_step;
	}
}


export class StepsContext extends ParserRuleContext {
	constructor(parser?: wbpParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public step_list(): StepContext[] {
		return this.getTypedRuleContexts(StepContext) as StepContext[];
	}
	public step(i: number): StepContext {
		return this.getTypedRuleContext(StepContext, i) as StepContext;
	}
    public get ruleIndex(): number {
    	return wbpParser.RULE_steps;
	}
}


export class SourceChordContext extends ParserRuleContext {
	constructor(parser?: wbpParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public chordType_list(): ChordTypeContext[] {
		return this.getTypedRuleContexts(ChordTypeContext) as ChordTypeContext[];
	}
	public chordType(i: number): ChordTypeContext {
		return this.getTypedRuleContext(ChordTypeContext, i) as ChordTypeContext;
	}
    public get ruleIndex(): number {
    	return wbpParser.RULE_sourceChord;
	}
}


export class TargetChordContext extends ParserRuleContext {
	constructor(parser?: wbpParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public signedInt(): SignedIntContext {
		return this.getTypedRuleContext(SignedIntContext, 0) as SignedIntContext;
	}
    public get ruleIndex(): number {
    	return wbpParser.RULE_targetChord;
	}
}


export class TransitionContext extends ParserRuleContext {
	constructor(parser?: wbpParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public sourceChord(): SourceChordContext {
		return this.getTypedRuleContext(SourceChordContext, 0) as SourceChordContext;
	}
	public targetChord(): TargetChordContext {
		return this.getTypedRuleContext(TargetChordContext, 0) as TargetChordContext;
	}
	public steps(): StepsContext {
		return this.getTypedRuleContext(StepsContext, 0) as StepsContext;
	}
    public get ruleIndex(): number {
    	return wbpParser.RULE_transition;
	}
}
